<resources>
    <string name="app_name">MyOpenGLDemo</string>

    <string name="textureFilterChooser">Texture Filters</string>
    <string name="chooseTextureFilter">Choose Texture Filter</string>
    <string name="noAnisotropicFiltering">Your GPU does not support anisotropic filtering!</string>

    <string name="NearestNeighbour">Nearest neighbour</string>
    <string name="Bilinear">Bilinear</string>
    <string name="BilinearMipmapping">Bilinear mipmapping</string>
    <string name="TrilinearMipmapping">Trilinear mipmapping</string>
    <string name="AnisotropicMipmapping">Anisotropic mipmapping</string>

    <string name="enableAa">Enable AA</string>
    <string name="disableAa">Disable AA</string>
</resources>