<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Menu item appear as action button if possible -->
<!--    <item-->
<!--        android:id="@+id/action_search"-->
<!--        android:icon="@drawable/ic_action_search"-->
<!--        android:showAsAction="ifRoom"-->
<!--        android:title="@string/action_search" />-->

    <!-- Menu items always be in the overflow -->
    <item
        android:id="@+id/filterChoices_Nearest_neighbour"
        android:title="@string/NearestNeighbour"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterChoices_Bilinear"
        android:title="@string/Bilinear"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterChoices_BilinearMipmapping"
        android:title="@string/BilinearMipmapping"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterChoices_TrilinearMipmapping"
        android:title="@string/TrilinearMipmapping"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterChoices_AnisotropicMipmapping"
        android:title="@string/AnisotropicMipmapping"
        app:showAsAction="never" />
</menu>